# chess_clock

./: .gitignore  README.md
doc/: koncepcja.txt  logika_systemu.txt
doc/mierzenie_czasu/: implementacja.md  interwencja_sedziego.md  tempo_gry.md  wyswietlanie.md
doc/wyświetlacz/: koncepcja.md
src/: main.c  time_config.h
src/app/: app.c  app.h
src/config/: config.c  config.h
src/display/: display.c  display.h  display_driver.h
src/dummy/: dummy.c  dummy.h  game_types.h  time_config.h
src/game/: game.c  game.h  game_types.h  time_config.h
test/display/: CMakeLists.txt  test.cpp
test/dummy/: CMakeLists.txt  test.cpp
test/game/: CMakeLists.txt  main.cpp  test.cpp
test/mingw-std-threads/: mingw.mutex.h  mingw.thread.h
test/template/: CMakeLists.txt  test.cpp
test/trompeloeil/include/: trompeloeil.hpp
